// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DayViewComponent renders a day with many rehearsals 1`] = `
<div
  className="ui container"
>
  <h2
    className="ui header"
  >
    Sat, January 20
  </h2>
  <button
    className="ui button"
    disabled={undefined}
    onClick={[Function]}
    role="button"
    tabIndex={undefined}
  >
    Back to week
  </button>
  <button
    className="ui button"
    disabled={undefined}
    onClick={[Function]}
    role="button"
    tabIndex={undefined}
  >
    Add Rehearsal
  </button>
  <div
    className="ui message"
    onClick={[Function]}
  >
    <div
      className="header"
    >
      13:00 - 14:30
    </div>
    <p
      style={
        Object {
          "paddingTop": "1rem",
        }
      }
    >
      
    </p>
    <button
      className="ui button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      Cancel
    </button>
  </div>
  <div
    className="ui message"
    onClick={[Function]}
  >
    <div
      className="header"
    >
      14:30 - 16:00
    </div>
    <p
      style={
        Object {
          "paddingTop": "1rem",
        }
      }
    >
      
    </p>
    <button
      className="ui button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      Cancel
    </button>
  </div>
  <div
    className="ui message"
    onClick={[Function]}
  >
    <div
      className="header"
    >
      16:00 - 18:00
    </div>
    <p
      style={
        Object {
          "paddingTop": "1rem",
        }
      }
    >
      
    </p>
    <button
      className="ui button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      Cancel
    </button>
  </div>
</div>
`;

exports[`DayViewComponent renders a day with one rehearsal 1`] = `
<div
  className="ui container"
>
  <h2
    className="ui header"
  >
    Tue, January 15
  </h2>
  <button
    className="ui button"
    disabled={undefined}
    onClick={[Function]}
    role="button"
    tabIndex={undefined}
  >
    Back to week
  </button>
  <button
    className="ui button"
    disabled={undefined}
    onClick={[Function]}
    role="button"
    tabIndex={undefined}
  >
    Add Rehearsal
  </button>
  <div
    className="ui message"
    onClick={[Function]}
  >
    <div
      className="header"
    >
      19:00 - 22:00
    </div>
    <p
      style={
        Object {
          "paddingTop": "1rem",
        }
      }
    >
      
    </p>
    <button
      className="ui button"
      disabled={undefined}
      onClick={[Function]}
      role="button"
      tabIndex={undefined}
    >
      Cancel
    </button>
  </div>
</div>
`;
